<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">#1stPass</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_authentication">Register to #1stPass</string>
    <string name="title_activity_register">Register to #1stPass</string>
    <string name="title_activity_first_pass">#1stPass</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="User">Username</string>
    <string name="Password">Password</string>
    <string name="Password2">Confirm Password</string>
    <string name="Confirm">Confirm</string>
    <string name="dialog_message">Connection not Established</string>
    <string name="dialog_title">Network Error</string>
    <string name="addButton">Add entry</string>
    <string name="alertName">Name:</string>
    <string name="alertURL">URL:</string>
    <string name="alertUSR">Username:</string>
    <string name="alertPSW">Password:</string>
    <string name="sync">SYNC NOW!</string>
    <string name="welcome">One Pass to Rule them All!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="api_key">API key</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="descriptionPerm">#1stPass internal permission</string>
    <string name="copiablePassText">Password is Copiable</string>
    <string name="visiblePassText">Password is Visible</string>

</resources>