<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Register" >

    <EditText
        android:id="@+id/editTextRegPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextRegPassword2"
        android:layout_below="@+id/textPass"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextRegPassword"
        android:layout_below="@+id/editTextRegUsername"
        android:text="@string/Password"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textPass2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextRegPassword2"
        android:layout_below="@+id/editTextRegPassword"
        android:text="@string/Password2"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextRegUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textPass"
        android:layout_alignRight="@+id/editTextRegPassword"
        android:layout_below="@+id/textUser"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextRegPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textPass2"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" >
    </EditText>

    <TextView
        android:id="@+id/textUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextRegUsername"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:text="@string/User"
        android:textStyle="bold" />

    <Button
        android:id="@+id/confirmButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextRegPassword2"
        android:layout_centerVertical="true"
        android:onClick="onClickConfirm"
        android:text="@string/Confirm"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirmButton"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="italic" />

</RelativeLayout>