<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewShowName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertName"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/editTextShowName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>


    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewShowURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertURL"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/editTextShowURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>
    </TableRow>


    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewShowUSR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertUSR"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/editTextShowUSR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>


    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textViewShowPSW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alertPSW"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/editTextShowPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

</TableLayout>