<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textViewAlertName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_alignParentTop="true"
        android:text="@string/alertName"
        android:textAppearance="?android:attr/textAppearanceLarge" >

        <requestFocus />
    </TextView>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAlertUSR"
        android:layout_below="@+id/textViewAlertName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewAlertURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextURL"
        android:layout_below="@+id/editTextName"
        android:text="@string/alertURL"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextUSR"
        android:layout_below="@+id/textViewAlertURL"
        android:ems="10"
        android:inputType="textUri" >
    </EditText>

    <TextView
        android:id="@+id/textViewAlertUSR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextURL"
        android:layout_below="@+id/editTextURL"
        android:text="@string/alertUSR"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextUSR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAlertPSW"
        android:layout_below="@+id/textViewAlertUSR"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textViewAlertPSW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPass"
        android:layout_below="@+id/editTextUSR"
        android:text="@string/alertPSW"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editTextPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAlertPSW"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="textPassword" />

</RelativeLayout>